--- a/PageTable.org
+++ b/PageTable.org
@@ -174,41 +174,41 @@ gant = gnt chart of campaign
 blg = related blog post
 
 
-| solutions pages           | funx                    | form                | launch  | graphic | Intro | exsum | ft. | ben | investment | rsch | gsusrstry | TA  | TAG | propi | distrn | conl | wbd | anim | fstrat | cf  | gant | related VR exp | legal | budget | tagline | Abstract | Description |    |   |
-| 1. architect              | blueprint               | sketch house        | feb 12  | dp      | gh    | no    | gh  | gh  | no         | no   | no        | no  | no  | no    | no     | no   | ws  | no   | no     | no  | no   | google blocks  | no    | no     | yes     | gh       | gh          |    |   |
-| 2. color                  | chose colors            | 3D Color Palet      | feb 12  | dp      | gh    | no    | gh  | gh  | no         | dp   | no        | no  | no  | no    | no     | no   | ws  | no   | no     | gh  | no   | tilt brush     | no    | no     | gh      | gh       | gh          |    |   |
-| 3. music                  | discover, share, create | Listen on the Moon  | feb 12  | dp      | gh    | gh    | gh  | gh  | gh         | gh   | gh        | gh  | gh  | no    | no     | gh   | no  | no   | gh     | no  | no   | no             | no    | no     | gh      | gh       | gh          |    |   |
-| 4. bloomaway              | travel                  |                     | feb 12  | y       | tf    | y     |     |     |            |      |           | y   |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 5. infinite               | view content            | art gallery         | feb 12  | y       | yes   | y     | y   |     |            | yes  | yes       | no  |     | yes   | yes    | no   | yes | yes  | no     | yes | no   |                | yes   | yes    | yes     |          |             |    |   |
-| 6. facematch              | ad-view verify          |                     | feb 12  | y       |       | y     |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 7. live stream            | telepresence            |                     | feb 12  |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 8. nye                    | entertainment           |                     | feb 12  | y       |       | y     |     | y   |            |      | y         | y   | y   |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 9. live forever           | immortalize             |                     | march 1 |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 10. enterprise b2b        |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 11. exhibit               |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 12. festival              | Live Event Marketing    | event               |         | y       | yes   | yes   | no  | no  | no         | yes  | yes       | yes | no  | no    | no     | yes  | no  | no   | yes    | no  | no   | no             | no    | yes    | no      |          |             |    |   |
-| 13. wellness              | Mindfullness in VR      |                     |         | yes     | no    | yes   | no  | no  | no         | yes  | no        | no  | no  | no    | no     | no   | no  | no   | no     | no  | no   | no             | no    | no     | no      |          |             |    |   |
-| 14. 3d brand design       |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 15. anon on blockchain    |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 16. ar branding           |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 17. ar reatil             |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 18. ar event              |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 19. fifa                  |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 20. foodman               |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 21. health care           |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 22. hotels                |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 23. in vr                 |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 24. sports                |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 25. token sale            |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 26. encyclopedia          | index information       | visual encyclopedia |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 27. xr-first website      |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 28. emacs GUI             |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 29. torus                 |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 30. existing int he world |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 31. bioler room           |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 32. 3d brand design       |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 33. city dev              |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 34. coaches               |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 35. token sale            |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-| 36. scavenger hunt        |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
-|                           |                         |                     |         |         |       |       |     |     |            |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             | gs |   |
+| solutions pages           | funx                    | form                | launch  | graphic | Intro | exsum | ft. | ben | invest | rsch | gsusrstry | TA  | TAG | propi | distrn | conl | wbd | anim | fstrat | cf  | gant | related VR exp | legal | budget | tagline | Abstract | Description | VO |   |
+| 1. architect              | blueprint               | sketch house        | feb 12  | yes     | no    | no    | no  | no  | no     | yes  | yes       | no  | no  | no    | no     | no   | yes | no   | no     | yes | no   | google blocks  | no    | yes    | yes     | yes      | yes         | no |   |
+| 2. color                  | chose colors            | 3D Color Palet      | feb 12  | dp      | gh    | no    | gh  | gh  | no     | dp   | no        | no  | no  | no    | no     | no   | ws  | no   | no     | gh  | no   | tilt brush     | no    | no     | gh      | gh       | gh          |    |   |
+| 3. music                  | discover, share, create | Listen on the Moon  | feb 12  | dp      | gh    | gh    | gh  | gh  | gh     | gh   | gh        | gh  | gh  | no    | no     | gh   | no  | no   | gh     | no  | no   | no             | no    | no     | gh      | gh       | gh          |    |   |
+| 4. bloomaway              | travel                  |                     | feb 12  | y       | tf    | y     |     |     |        |      |           | y   |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 5. infinite               | view content            | art gallery         | feb 12  | y       | yes   | y     | y   |     |        | yes  | yes       | no  |     | yes   | yes    | no   | yes | yes  | no     | yes | no   |                | yes   | yes    | yes     |          |             |    |   |
+| 6. facematch              | ad-view verify          |                     | feb 12  | y       |       | y     |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 7. live stream            | telepresence            |                     | feb 12  |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 8. nye                    | entertainment           |                     | feb 12  | y       |       | y     |     | y   |        |      | y         | y   | y   |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 9. live forever           | immortalize             |                     | march 1 |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 10. enterprise b2b        |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 11. exhibit               |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 12. festival              | Live Event Marketing    | event               |         | y       | yes   | yes   | no  | no  | no     | yes  | yes       | yes | no  | no    | no     | yes  | no  | no   | yes    | no  | no   | no             | no    | yes    | no      |          |             |    |   |
+| 13. wellness              | Mindfullness in VR      |                     |         | yes     | no    | yes   | no  | no  | no     | yes  | no        | no  | no  | no    | no     | no   | no  | no   | no     | no  | no   | no             | no    | no     | no      |          |             |    |   |
+| 14. 3d brand design       |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 15. anon on blockchain    |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 16. ar branding           |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 17. ar reatil             |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 18. ar event              |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 19. fifa                  |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 20. foodman               |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 21. health care           |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 22. hotels                |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 23. in vr                 |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 24. sports                |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 25. token sale            |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 26. encyclopedia          | index information       | visual encyclopedia |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 27. xr-first website      |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 28. emacs GUI             |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 29. torus                 |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 30. existing int he world |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 31. bioler room           |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 32. 3d brand design       |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 33. city dev              |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 34. coaches               |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 35. token sale            |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+| 36. scavenger hunt        |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             |    |   |
+|                           |                         |                     |         |         |       |       |     |     |        |      |           |     |     |       |        |      |     |      |        |     |      |                |       |        |         |          |             | gs |   |
