--- a/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/bloomaway_abstract.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Bloomaway[DONE]/bloomaway_abstract.org
@@ -1,1 +1,1 @@
-Travel to any location imaginable by reaching out and touch it on a map. 
+Travel to any location imaginable by reaching out and touch it on a map 
