--- a/Pages/1Solutions/1Products/Jan Launch/Architecture [DONE]/architecture_abstract.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Architecture [DONE]/architecture_abstract.org
@@ -1,2 +1,2 @@
 
-Allow architects the opportunity to sketch, measure, and create 3D models of their project, by bringing them into Virtual Reality.
+Invite architects to sketch, measure, and create 3D models in Virtual Reality
