--- a/Pages/1Solutions/1Products/Jan Launch/Architecture [DONE]/Features.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Architecture [DONE]/Features.org
@@ -1,2 +1,1 @@
-Changing locations emerge behind your field of view. Reach out and select a destination off the virtual map, turn around, 
-and you've arrived in a new place
+Architects design and assemble their real-world projects in Virtual space before exporting them for physical world implementation
