updated contact info

--- a/Pages/01Bottom Bar [DONE]/Contact/contactstext_goLIVE.org
+++ b/Pages/01Bottom Bar [DONE]/Contact/contactstext_goLIVE.org
@@ -5,13 +5,13 @@ We are open most days, all hours, by appointment.   481 Van Brunt, Brooklyn, New
 [text box Message Submit
 ]
 : Email : AnnaIrene@novamedia.nyc
-: Telegram :
+: Telegram : https://t.me/xrnewyork
 : Instagram :  @novaxrmedia 
 : Facebook : https://www.facebook.com/N0vamedia/
 : Twitter : @N0vamedia
-: GoogleVoice :
+: GoogleVoice : (732) 903-5537
 : slack : novamedianyc.slack.com
-: steemit : 
-: Sketchfab :
+: steemit : @novaxr
+: Sketchfab : /novamedianewyork
 
 === Build XR 
